AC_PREREQ(2.59)

AC_INIT([protobuf-c-iter-unpack-test], [1.0], [r.lomonosov@gmail.com])
AC_CANONICAL_TARGET
AM_INIT_AUTOMAKE([1.5 foreign])
m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])

AC_CONFIG_MACRO_DIR([m4])

AC_PROG_CC
AC_PROG_CXX

AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([
  Makefile
  src/Makefile
])
AC_OUTPUT

